# graph-algorithms-revisit

./: .gitignore  CMakeLists.txt  boostOK.cpp  dag.lgf  example.dim  example.lfg  grail.hpp  grail_test.cpp  graph_reader_test.cpp  main.cpp  results.txt
data-sets/: example.lgf  g400.12.graphml  graphml2lgf.py
data-sets/random-dag/: g.10.1.graphml  g.10.10.graphml  g.10.2.graphml  g.10.3.graphml  g.10.4.graphml  g.10.5.graphml  g.10.6.graphml  g.10.7.graphml  g.10.8.graphml  g.10.9.graphml  g.100.1.graphml  g.100.10.graphml  g.100.2.graphml  g.100.3.graphml  g.100.5.graphml  g.100.6.graphml  g.100.7.graphml  g.100.8.graphml  g.100.9.graphml  g.11.1.graphml  g.11.10.graphml  g.11.2.graphml  g.11.3.graphml  g.11.4.graphml  g.11.5.graphml  g.11.6.graphml  g.11.7.graphml  g.11.8.graphml  g.11.9.graphml  g.12.1.graphml  g.12.10.graphml  g.12.2.graphml  g.12.3.graphml  g.12.4.graphml  g.12.5.graphml  g.12.6.graphml  g.12.7.graphml  g.12.8.graphml  g.12.9.graphml  g.13.1.graphml  (+870 more)
